# prog05-jcracken-reupload

./: 1sphere.txt  2spheres1.txt  2spheres2.txt  2spheres3.txt  CMakeLists.txt  README.md  ballring.txt  myscene.ppm  myscene.txt
src/: CMakeLists.txt  color.cpp  color.h  edge.cpp  edge.h  light.cpp  light.h  main.cpp  matrix.cpp  matrix.h  obj.cpp  obj.h  pixel.cpp  pixel.h  ppm.cpp  ppm.h  scene.cpp  scene.h  triangle.cpp  triangle.h  vect.cpp  vect.h  vect4.cpp  vect4.h
