# Author: Rohin Galhotra
# NetID: rgalhotra
# Date: Jan 2018
# Project 1: sdl_demo

cmake_minimum_required(VERSION 3.1)

# Define the project name.

project (prog05)

# Add a subdirectory to the project. The CMakeLists.txt file in that subdirectory
# will be used for further setting up the project.

add_subdirectory( src )
